--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <a href="/">Home</a>
     </li>
     <li>
-      <a href="pages\products.html">Products</a>
+      <a href="/pages/products.html">Products</a>
     </li>
     <li>
-      <a href="pages\orders.html">Orders</a>
+      <a href="/pages/orders.html">Orders</a>
     </li>
     <li>
-      <a href="/about.htmlcode.">About</a>
+      <a href="/about/htmlcode">About</a>
     </li>
   </ul>
   <h1>Fantastic Burger</h1>
@@ -48,9 +48,9 @@
   <a href="https://www.mindmegette.hu/hamburger-hazilag.recept/">
     Barbecued Burgers
   </a>
-  <a href="d:\pages\orders.html">Orders</a>
-  <a target="_blank" href="d:\ifksp\img\burger.jpg"></a>
-  <img width=scr 56 scr="d:\ifksp\img\burger.jpg" alt="tasty burger">
+  <a href="orders.html">Orders</a>
+  <a target="_blank" href="img/burger.jpg"></a>
+  <img width=56 src="img/burger.jpg" alt="tasty burger">
   <a href=""></a>
 </body>
 
