--- a/pages/products.html
+++ b/pages/products.html
@@ -12,16 +12,16 @@
         <a href="/">Home</a>
       </li>
       <li>
-        <a href="pages\products.html">Products</a>
+        <a href="products.html">Products</a>
     </li>
     <li>
-      <a href="pages\orders.html">Orders</a>
+      <a href="orders.html">Orders</a>
     </li>
     <li>
-      <a href="/about.html">About</a>
+      <a href="about.html">About</a>
       </li>
     </ul>
     <h1>Products</h1>
-    <a href="d:/ifksp/html-basic-1/pages/Products.html">Orders</a>
+    <a href="Products.html">Orders</a>
 </body>
 </html>
